webook/internal/webook-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webook-app
  template:
    metadata:
      labels:
#         * labels和matchLabels一定要匹配
        app: webook-app
#      * 这个是deployment管理pod的模板
    spec:
#      * Pod里面的所有容器
      containers:
        - name: webook-app
          image: sgy111222333/webook:v0.0.1
          ports:
            - containerPort: 8081
