webook/internal/webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis-service
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # * k8s 内部访问的接口
      port: 6380
      # * 外部访问端口, 必须在30000~32767之间
      nodePort: 31379
      # * Pod 暴露的端口
      targetPort: 6379
  type: NodePort
